# StereoVision

./: CMakeLists.txt  Misc.hpp  README.md  Utils.hpp  demo.cpp
Calibration/: CMonocularCameraCalibration.cpp  CMonocularCameraCalibration.h  CStereoCameraCalibration.cpp  CStereoCameraCalibration.h  CStereoCameraRectification.cpp  CStereoCameraRectification.h  Utils.hpp
Calibration/HandEyeCalibration/: CHandEyeCalibration.cpp  CHandEyeCalibration.h
Common/Other/: AdaptivePSO.py  AdaptivePSO_DQ.py  DualQuaternion_gtc.py  LinesIntersections.m  README.md  getCorrectedPose.py
PointCloud/: README.md
PointCloud/Registration/: 15.txt  17.txt  CKNNSearch.cpp  CKNNSearch.h  CPoint2PlaneICP.cpp  CPoint2PlaneICP.h  CPoint2PointICP.cpp  CPoint2PointICP.h  CTxtReader.cpp  CTxtReader.h  ICP point to plane.docx  test.cpp
StereoMatch/: CPatchMatchStereo.cpp  CPatchMatchStereo.h
Test/: testdata.h
